@@ -43,16 +43,18 @@ public class DbMigrateOptionsDialog extends CayenneDialog {
     public static final int SELECT = 1;
 
 	protected JLabel schemaLabel;
-    protected JComboBox schemaSelector;
+	protected JLabel catalogLabel;
+    protected JComboBox<String> catalogSelector;
+    protected JComboBox<String> schemaSelector;
     protected JButton selectButton;
     protected JButton cancelButton;
     protected int choice;
     
-    public DbMigrateOptionsDialog(Collection<String> schemas, String dbUserName) {
-        super(Application.getFrame(), "Migrate DB Schema: Select Schema");
+    public DbMigrateOptionsDialog(Collection<String> catalogs, Collection<String> schemas, String dbUserName) {
+        super(Application.getFrame(), "Migrate DB Schema: Select Catalog and Schema");
         init();
         initController();
-        initFromModel(schemas, dbUserName);
+        initFromModel(catalogs, schemas, dbUserName);
 
         pack();
         setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
@@ -63,13 +65,15 @@ public class DbMigrateOptionsDialog extends CayenneDialog {
     protected void init() {
         selectButton = new JButton("Continue");
         cancelButton = new JButton("Cancel");
-        schemaSelector = new JComboBox();
+        catalogSelector = new JComboBox<>();
+        schemaSelector = new JComboBox<>();
         FormLayout layout = new FormLayout(
                 "right:pref, 3dlu, fill:max(170dlu;pref):grow",
                 "");
         DefaultFormBuilder builder = new DefaultFormBuilder(layout);
         builder.setDefaultDialogBorder();
 
+        catalogLabel = builder.append("Select Catalog:", catalogSelector, true);
         schemaLabel = builder.append("Select Schema:", schemaSelector);
 
         JPanel buttons = new JPanel(new FlowLayout(FlowLayout.RIGHT));
@@ -108,21 +112,44 @@ public class DbMigrateOptionsDialog extends CayenneDialog {
         setVisible(false);
     }
     
-    protected void initFromModel(Collection<String> schemas, String dbUserName) {
+    protected void initFromModel(Collection<String> catalogs, Collection<String> schemas, String dbUserName) {
 
         this.choice = CANCEL;
 
-        schemaSelector.setVisible(true);
-        schemaLabel.setVisible(true);
-        schemaSelector.setModel(new DefaultComboBoxModel(schemas.toArray(new String[] {})));
+        if(!schemas.isEmpty()) {
+            schemaLabel.setVisible(true);
+            schemaSelector.setModel(new DefaultComboBoxModel<>(schemas.toArray(new String[0])));
+            schemaSelector.setVisible(true);
+        } else {
+            schemaLabel.setVisible(false);
+            schemaSelector.setVisible(false);
+        }
+
+        if(!catalogs.isEmpty()) {
+            catalogLabel.setVisible(true);
+            catalogSelector.setModel(new DefaultComboBoxModel<>(catalogs.toArray(new String[0])));
+            catalogSelector.setVisible(true);
+        } else {
+            catalogLabel.setVisible(false);
+            catalogSelector.setVisible(false);
+        }
+
+        if (dbUserName == null) {
+            return;
+        }
 
         // select schema belonging to the user
-        if (dbUserName != null) {
-            for (String schema : schemas) {
-                if (dbUserName.equalsIgnoreCase(schema)) {
-                    schemaSelector.setSelectedItem(schema);
-                    break;
-                }
+        for (String schema : schemas) {
+            if (dbUserName.equalsIgnoreCase(schema)) {
+                schemaSelector.setSelectedItem(schema);
+                break;
+            }
+        }
+
+        for(String catalog : catalogs) {
+            if(dbUserName.equalsIgnoreCase(catalog)) {
+                catalogSelector.setSelectedItem(catalog);
+                break;
             }
         }
     }
@@ -132,6 +159,10 @@ public class DbMigrateOptionsDialog extends CayenneDialog {
      */
     public String getSelectedSchema() {
     	return (String) schemaSelector.getSelectedItem();
+    }
+
+    public String getSelectedCatalog() {
+        return (String) catalogSelector.getSelectedItem();
     }
     
     public int getChoice() {
