@@ -73,6 +73,7 @@ CAY-2144 cdbimport always fails for databases which don't support catalogs
 CAY-2146 Vertical inheritance: record still inserted into parent db table when child validation fails
 CAY-2148 Failure upgrading from 3.1 to M4
 CAY-2150 UI bug: PK generation custom sequence is getting reset
+CAY-2151 Migrate Database Schema: issue when no db is specified
 CAY-2153 Modeler Exception in save action after reverse engineering some complex DB schema
 CAY-2154 Migrate db: queries order
 
